# quizly-backend

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
.zed/: settings.json
auth_app/: tests.py
auth_app/api/: serializers.py  urls.py  views.py
core/: settings.py  urls.py
core/test_helpers/: auth_helpers.py
quiz_app/: admin.py  models.py  tests.py
quiz_app/api/: permissions.py  serializers.py  services.py  urls.py  utils.py  views.py
quiz_app/migrations/: 0001_initial.py  0002_quiz_owner.py
quiz_app/tests/: helpers.py  test_create.py  test_destroy.py  test_list.py  test_partial_update.py  test_retrieve.py
